tests/fixtures/invalid/none_bitnot.py
# Cannot use bitwise NOT on None
x: None = None
y: int = ~x
